--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.ResetPwdActivity"/>
     </application>
 
 </manifest>
