--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.ResetPwdActivity"/>
+        <activity android:name=".activity.ClassifyActivity"/>
     </application>
 
 </manifest>
